NavBrand.js & NavBrand.scss - Fix consistency for components name and className for better readability

--- a/src/components/Layout/Navbar/Navbrand/Navbrand.scss
+++ b/src/components/Layout/Navbar/Navbrand/Navbrand.scss
@@ -1,4 +1,4 @@
-.nav__brand {
+.navBrand {
   font-family: var(--font-primary);
   font-size: 2.2rem;
   font-weight: 300;
